--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,14 @@
 body {
     background: linear-gradient(90deg,steelblue 0%, rgb(35, 188, 219) 100%);
+    font-size: 1.1em;
 }
 
-/* TODO: change this to use flexbox instead */
-.title-banner h1, .title-footer {
+/*.title-banner h1, .title-footer {
     padding-top: 10%;
+}*/
+
+.title-banner {
+    text-align: center;   
 }
 
 .title-banner h3 {
@@ -13,6 +17,16 @@ body {
     display: inline-block;
     width: fit-content;
     min-width: 200px;
+    margin: auto;
+}
+
+.title-footer {
+    position: absolute;
+    text-align: center;
+    bottom: 0vh;
+    width: 750px;
+    left: calc(50% - 375px);
+    margin: auto;
 }
 
 nav {
@@ -21,6 +35,7 @@ nav {
 
 nav ul {
     padding-left: 0px;
+    padding-top: 10px;
 }
 
 nav ul li {
@@ -30,11 +45,12 @@ nav ul li {
 a {
     color: black;
     text-decoration: none;
+    transition: 0.2s;
+    font-weight: 400;
 }
 
 a:hover {
     color: rgb(0, 0, 190);
-    font-weight: 500;
 }
 
 .account-form input, .account-form button, .search-form input, .search-form button, .serach-form select, 
@@ -48,34 +64,101 @@ a:hover {
     background-color: rgb(201, 214, 255);
 }
 
-.not-logged-in, .page-not-found {
-    text-align: center;
+.create .title-banner {
+    margin: calc(50vh - 240px) auto 0;
+}
+
+.search .title-banner {
+    margin: calc(50vh - 350px) auto;
+}
+
+.account-form, .webpage-form {
+    background-color: rgb(210, 239, 249);
+    border-radius: 15px;
+    padding: 15px;
+    margin: auto;
+    width: calc(50% + 200px); /* Tried fit-content, didn't change the width? I'm finding a weird solution here */
+}
+
+.create label {
+    display: inline;
+    width: 45%;
+    text-align: right;
+}
+
+.create input, .create button {
+    max-width: 45%;
+    width: 45%;
+}
+
+label.error-active, label.error-inactive {
+    display: block;
+    width: 100%;
+}
+
+.not-logged-in, .page-not-found, .main-section {
+    background-color: rgb(210, 239, 249);
+    border-radius: 15px;
+    padding: 15px;
+    height: 320px;
+    margin: calc(50vh - 160px) auto;
+    width: fit-content;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    height: 100vh;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: nowrap;
+}
+
+.main-section .row, .not-logged-in .row, .page-not-found .row, .webpage-form .row, .account-form .row {
+    margin-left: 0;
 }
 
 .error-active {
     background-color: rgb(233, 120, 120);
+    transition: 0.2s;
 }
 
 .error-inactive {
     background-color: none;
+    transition: 0.2s;
 }
 
 #pages-table {
-    background-color: lightblue;
-    border-radius: 5px;
     text-align: center;
     margin: 30px 0px;
 }
 
-#pages-table thead {
+#pages-table tr:nth-child(even) {
+    background-color: lightblue;
+}
+
+#pages-table tr:nth-child(odd) {
+    background-color: rgb(193, 220, 230);
+}
+
+#pages-table thead tr {
+    background-color: white !important; 
+}
+
+.page-link a, .edit-link a, .delete-link a {
+    border-radius: 5px;
+}
+
+.page-link a:hover, .edit-link a:hover, .delete-link a:hover {
     background-color: white;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+}
+
+.page-link a {
+    background-color: lightsteelblue;
+}
+
+.edit-link a {
+    background-color: lightgoldenrodyellow; /* why is this a color? */
+}
+
+.delete-link a {
+    background-color: lightpink;
 }
 
 #edit-page iframe {
@@ -126,6 +209,7 @@ a:hover {
         align-items: center;
         flex-direction: column;
         text-align: center;
+        font-size: 1em;
     }
 
     .title-banner h3 {
@@ -133,8 +217,39 @@ a:hover {
         width: 100%;
     }
 
+    .title-footer {
+        width: 100%;
+        left: 0;
+    }
+
     .account-form input, .account-form button, .search-form input, .search-form button, .serach-form select, 
     .webpage-form input, .webpage-form button {
         max-width: 100%;
+    }
+
+    .search .title-banner {
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    body {
+        font-size: 0.9em;
+    }
+
+    .main-section {
+        height: 400px;
+        margin: calc(50vh - 200px) auto;
+        padding: 8px;
+    }
+
+    .account-form .webpage-form {
+        width: 100%;
+    }
+
+    .create label, .create input, .create button {
+        display: block;
+        width: 100%;
+        text-align: center;
     }
 }
